fix alignment

--- a/src/portfolio/about/experience-item.css
+++ b/src/portfolio/about/experience-item.css
@@ -13,7 +13,10 @@
 }
 
 .experience-item .company-image img {
-    width: 40px;
+    width: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .experience-item .company-location {
